# projects/automat-api/src/API/models.ts
@@ -17,12 +17,12 @@ export { ItemDetailedDto } from './models/item-detailed-dto';
 export { ItemDisplayDto } from './models/item-display-dto';
 export { ItemGetAllDto } from './models/item-get-all-dto';
 export { ItemLocationDto } from './models/item-location-dto';
-export { LogQrCodeDto } from './models/log-qr-code-dto';
 export { QrCodeDto } from './models/qr-code-dto';
 export { TaeglicheUserDto } from './models/taegliche-user-dto';
 export { UserAdmiBorrowDto } from './models/user-admi-borrow-dto';
 export { UserAdminDetailedDto } from './models/user-admin-detailed-dto';
 export { UserAdminGetAll } from './models/user-admin-get-all';
 export { UserLoginDto } from './models/user-login-dto';
+export { ValIdObjectDto } from './models/val-id-object-dto';
 export { ValidQrCodeDto } from './models/valid-qr-code-dto';
 export { WieVielZuspaetDto } from './models/wie-viel-zuspaet-dto';
